kubernetes/Int/deployments/media/tautulli/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: tautulli
    namespace: media
spec:
    selector:
        app: tautulli
    ports:
        - port: 8181
