kubernetes/Int/deployments/media/tautulli/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: tautulli
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`tautulli.svc.noms.tv`)
          kind: Rule
          services:
            - name: tautulli
              port: 8181
        - match: Host(`plexstats.noms.tv`)
          kind: Rule
          services:
            - name: tautulli
              port: 8181
    tls:
        secretName: production-tls
